# Mythic-Agent

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/agent/: __init__.py  graph.py  memory.py  prompts.py
app/agent/tools/: __init__.py  config_formatter.py  example_retriever.py  list_wiki.py  version_compat.py  wiki_search.py  yaml_validator.py
app/api/: __init__.py  routes_chat.py  routes_generate.py  routes_health.py  routes_rag.py  routes_validate.py
app/core/: __init__.py  cache.py  config.py  exceptions.py  logging.py  tracing.py
app/frontend/static/: app.js  style.css
app/frontend/templates/: index.html
app/models/: __init__.py
app/rag/: __init__.py  chunker.py  embeddings.py  hyde.py  pipeline.py  rerank.py  retriever.py  vector_store.py
app/schemas/: __init__.py  chat.py  common.py  generate.py  rag.py
app/services/: __init__.py  chat_service.py  generation_service.py
docker/fastapi/: Dockerfile
eval/: __init__.py  queries.yaml  run_eval.py
scripts/: __init__.py  ingest.py  rebuild_index.py
tests/integration/: __init__.py  test_agent_flow.py  test_memory_followup.py  test_rag.py  test_rerank.py
tests/unit/: __init__.py  test_chat_stream.py  test_chunker.py  test_eval_runner.py  test_memory.py  test_prompts.py  test_schemas.py  test_vector_store.py  test_yaml_validator.py
